--- a/traefik-swarm.yml
+++ b/traefik-swarm.yml
@@ -7,14 +7,17 @@ services:
     ports:
       - 80:80
       - 443:443
-      - 8080:8080
     networks:
       - traefik-net
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /home/klaus/Development/workspace/traefik/traefik.toml:/traefik.toml
       - /home/klaus/Development/workspace/traefik/certs/:/certs/
-        #    container_name: traefik
+    deploy:
+      labels:
+        - "traefik.port=8080"
+        - "traefik.frontend.rule=Host:dashboard.mytraefik.de"
+        - "traefik.backend=traefik-dashboard"
 
 networks:
   traefik-net:
